add swipe refresh layout: swipe refresh layout add to the patient fragment to refresh the data in patients recycler view.

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -51,9 +51,10 @@ dependencies {
     // navigation component
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
 
+    //swipe refresh layout
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
+
 
     implementation project(":data")
     implementation project(":core")
-
-
 }
